# ap-rs

./: Cargo.toml  Makefile  README.md
examples/: error-handler.rs  option-and-positional-args.rs  positional-args-only.rs  simple.rs
src/: args.rs  error.rs  lib.rs
