# Copyright (c) 2021 James O. D. Hunt.
#
# SPDX-License-Identifier: Apache-2.0
#

[package]
name = "ap"
version = "0.1.3"
authors = ["James O. D. Hunt <jamesodhunt@gmail.com>"]
edition = "2018"
description = "Simple argument parsing for the command-line"
readme = "README.md"
homepage = "https://github.com/jamesodhunt/ap-rs"
repository = "https://github.com/jamesodhunt/ap-rs"
license = "Apache-2.0"
keywords = [
	"arg",
	"argument",
	"cli",
	"getopt",
	"parser",
]
categories = ["command-line-interface"]

[dependencies]
thiserror = "1.0"

[dev-dependencies]
regex = "1"
